# Hands-on-GCP-Closer-Academy

./: .bashrc  .mypy.ini  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: main.yml
client_libs_py/: index.html
docs/: requirements.txt
docs/content/: client_libs_py.md  create_resources.md  index.md
docs/content/architecture/: simplemlops.md
docs/content/exercises/: ex1.md  ex2.md  ex3.md  titanic.md
docs/content/exercises/simple_mlops/: architecture.md  dataset.md  index.md  step1.md  step2.md  step3.md  step4.md  step5.md
docs/content/manual_exercises/: ex1.md  ex2.md  ex3.md  ex4.md  titanic.md
docs/content/resources/architecture/: architecture.drawio
docs/content/services/: bigquery.md  cloud_storage.md  index.md  message_queue.md  serverless_computing.md
docs/part_1/: ingestion.drawio
exercises/simple_mlops/: index.html
exercises/simple_mlops/architecture/: index.html
exercises/simple_mlops/dataset/: index.html
exercises/simple_mlops/resources/architecture/: architecture.drawio  architecture_v2.drawio
exercises/simple_mlops/step1/: index.html
exercises/simple_mlops/step2/: index.html
exercises/simple_mlops/step3/: index.html
exercises/simple_mlops/step4/: index.html
exercises/simple_mlops/step5/: index.html
functions/TODO/solutions/ingest_data/: main.py
functions/TODO/solutions/train_model/: main.py
functions/cicd_exercises/ingest_data/: main_explained.py
functions/exercises/ingest_data/: main.py
functions/exercises/predictions_endpoint/: main.py  requirements.txt
functions/ingest_data/: main.py
functions/manual_exercises/ingest_data/: main.py  requirements.txt
functions/manual_exercises/predictions_endpoint/: main.py
functions/manual_exercises/train_model/: main.py
functions/mlops_usecase/a_ingest_data/app/: __init__.py  main.py
functions/mlops_usecase/a_ingest_data/config/: dev.env.yaml
functions/mlops_usecase/a_ingest_data/tests/: test_models.py  test_transform.py
functions/mlops_usecase/b_update_facts/app/: __init__.py  main.py  requirements.txt
functions/mlops_usecase/b_update_facts/config/: dev.env.yaml
functions/mlops_usecase/b_update_facts/test/: test_common.py  test_main.py
functions/mlops_usecase/c_train_model/app/: __init__.py  main.py  requirements.txt
functions/mlops_usecase/c_train_model/config/: dev.env.yaml
functions/mlops_usecase/c_train_model/tests/: test_main.py
functions/mlops_usecase/d_predictions_endpoint/app/: main.py
functions/simple_mlops/1_ingest_data/test/: test_transform.py
functions/simple_mlops/2_update_facts/app/: main.py
functions/simple_mlops/a_ingest_data/app/: main.py  requirements.txt
functions/simple_mlops/a_ingest_data/config/: dev.env.yaml
functions/simple_mlops/a_ingest_data/test/: test_main.py  test_transform.py
functions/simple_mlops/a_ingest_data/tests/: test_main.py  test_transform.py
functions/simple_mlops/b_update_facts/app/: main.py
functions/simple_mlops/b_update_facts/config/: dev.env.yaml
functions/simple_mlops/c_train_model/: __init__.py
functions/simple_mlops/c_train_model/app/: main.py  requirements.txt
functions/simple_mlops/c_train_model/config/: dev.env.yaml
functions/simple_mlops/d_predictions_endpoint/: main.py  requirements.txt
functions/simple_mlops/train_model/: main.py
functions/solutions/ingest_data/: main.py
functions/solutions/predictions_endpoint/: main.py
functions/solutions/train_model/: main.py  requirements.txt
functions/train_model/: main.py
infrastructure/bigquery/: example_schema.json  facts_titanic_schema.json  titanic_schema.json
resources/mlops_usecase/bigquery/: titanic_predictions.json  titanic_schema_raw.json
search/: search_index.json
services/: index.html
services/bigquery/: index.html
services/cloud_storage/: index.html
services/message_queue/: index.html
services/serverless_computing/: index.html
(+61 files in other folders)
